<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="#FFFFFF" >
  
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
    
		    <TableLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="#E3E3E3"
		        android:gravity="center" 
		        android:orientation="vertical">
		        
		        <TableRow>
		            
		            <TextView 
					    android:id="@+id/txt_tp_cad"
					    android:layout_width="100dp"
			            android:layout_height="50dp"
			            android:text="@string/tp_cadastro"/>
		            
		            <Spinner  
			            android:id="@+id/tp_cad"
					    android:layout_width="50dp" 
					    android:layout_height="40dp" 
					    android:layout_weight="1"
					    android:layout_marginLeft="10dp"
					    android:layout_marginTop="10dp"
					    android:layout_marginBottom="10dp"
					    android:layout_marginRight="10dp"
					    android:background="@drawable/text_borda" />
			        
		            
		        </TableRow>
		        
		        <TableRow>
		            
		            <TextView 
					    android:id="@+id/txt_nm_prod"
					    android:layout_width="100dp"
			            android:layout_height="50dp"
			            android:text="@string/nm_produto"/>
		            
		            <EditText  
			            android:id="@+id/nm_prod"
					    android:layout_width="50dp" 
					    android:layout_height="40dp" 
					    android:layout_weight="1"
					    android:layout_marginLeft="10dp"
					    android:layout_marginTop="10dp"
					    android:layout_marginBottom="10dp"
					    android:layout_marginRight="10dp"
					    android:background="@drawable/text_borda" />
			        
		            
		        </TableRow>
		        
		        <TableRow>
		            
		            <TextView 
					    android:id="@+id/txt_tp_un"
					    android:layout_width="100dp"
			            android:layout_height="50dp"
			            android:text="@string/tp_unidade"/>
		            
		            <Spinner  
			            android:id="@+id/tp_un"
					    android:layout_width="50dp" 
					    android:layout_height="40dp" 
					    android:layout_weight="1"
					    android:layout_marginLeft="10dp"
					    android:layout_marginTop="10dp"
					    android:layout_marginBottom="10dp"
					    android:layout_marginRight="10dp"
					    android:background="@drawable/text_borda" />
			        
		            
		        </TableRow>
		        
		        <TableRow>
		            
		            <TextView 
					    android:id="@+id/txt_qt_tp_un"
					    android:layout_width="100dp"
			            android:layout_height="50dp"
			            android:text="@string/qt_tp_unidade"/>
		            
		            <EditText  
			            android:id="@+id/qt_tp_un"
					    android:layout_width="50dp" 
					    android:layout_height="40dp" 
					    android:layout_weight="1"
					    android:layout_marginLeft="10dp"
					    android:layout_marginTop="10dp"
					    android:layout_marginBottom="10dp"
					    android:layout_marginRight="10dp"
					    android:background="@drawable/text_borda" />
			        
		            
		        </TableRow>
		        
		        <TableRow>
		            
			            <TextView 
						    android:id="@+id/txt_preco_prod"
						    android:layout_width="100dp"
				            android:layout_height="50dp"
				            android:text="@string/vl_produto"/>
			            
			            <EditText  
				            android:id="@+id/preco_prod"
						    android:layout_width="50dp" 
						    android:layout_height="40dp" 
						    android:layout_weight="1"
						    android:layout_marginLeft="10dp"
						    android:layout_marginTop="10dp"
						    android:layout_marginBottom="10dp"
						    android:layout_marginRight="10dp"
						    android:background="@drawable/text_borda" />
		            
		            </TableRow>
		            
		        	<TableRow>
		            
			            <TextView 
						    android:id="@+id/txt_quant_prod"
						    android:layout_width="100dp"
				            android:layout_height="50dp"
				            android:text="@string/qt_produto"/>
			            
			            <EditText  
				            android:id="@+id/quant_prod"
						    android:layout_width="50dp" 
						    android:layout_height="40dp" 
						    android:layout_weight="1"
						    android:layout_marginLeft="10dp"
						    android:layout_marginTop="10dp"
						    android:layout_marginBottom="10dp"
						    android:layout_marginRight="10dp"
						    android:background="@drawable/text_borda" />
		            
		            </TableRow>
		            
		        	<TableRow>
		            
			            <TextView 
						    android:id="@+id/txt_end_prod"
						    android:layout_width="100dp"
				            android:layout_height="50dp"
				            android:text="@string/endereco"/>
			            
			            <EditText  
				            android:id="@+id/end_prod"
						    android:layout_width="50dp" 
						    android:layout_height="40dp" 
						    android:layout_weight="1"
						    android:layout_marginLeft="10dp"
						    android:layout_marginTop="10dp"
						    android:layout_marginBottom="10dp"
						    android:layout_marginRight="10dp"
						    android:background="@drawable/text_borda" />
		            
		            </TableRow>
		            
		        	<TableRow>
		            
			            <Button
			            android:id="@+id/btn_busca_prod"
			            android:layout_width="wrap_content"
			            android:layout_height="32dp"
			            android:layout_marginBottom="10dp"
			            android:layout_marginTop="10dp"
			            android:layout_weight="1"
			            android:background="@drawable/buscar_borda"
			            android:text="@string/cadastrar"
			            android:onClick="cadastrar"
			            android:textColor="#FFFFFF"
			            android:textSize="12sp" />
		            
		            </TableRow>	
		
		    </TableLayout>
	    
	    </ScrollView>	
    
</LinearLayout>